# maxsmooth

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  codecov.yml  local_minima_example.py  mkdocs.yml  new_basis_program.py  new_basis_test.py  pyproject.toml  qptesting.py  requirements.txt  setup.py  simple_program.py  simple_test.py  test.py  x_data.txt  y_data.txt
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml
Basin-hopping_Nelder-Mead/: times_chis.py  y_data_for_comp.txt
Basin-hopping_Nelder-Mead/BHNM/: msf_fit.py
Data/: x.npy  y.npy
docs/: api-reference.md  conf.py  requirements.txt  source.rst
docs/_build/doctrees/: environment.pickle  index.doctree  intro.doctree  source.doctree
docs/_build/doctrees/_static/: myDirectives.doctree
docs/_build/doctrees/source/: README_for_docs.doctree  best_basis.doctree  chi_dist_example.doctree  index.doctree  intro.doctree  maxsmooth.doctree  new_basis_example.doctree  param_plotter_example.doctree  setting.doctree  simple_program.doctree  simple_test.doctree
docs/_build/html/: .buildinfo  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  source.html
docs/_build/html/_modules/: index.html
docs/_build/html/source/: README_for_docs.html  best_basis.html  chi_dist_example.html  index.html  intro.html  (+4 more)
docs/_build/latex/: maxsmooth.aux  maxsmooth.fdb_latexmk  maxsmooth.fls  maxsmooth.idx  maxsmooth.ilg  maxsmooth.ind  maxsmooth.out  maxsmooth.tex  maxsmooth.toc
docs/_build/spelling/: output.txt
docs/source/: CHANGELOG.rst  README_for_docs.rst  best_basis.rst  chi_dist_example.rst  conf.py  index.rst  intro.rst  maxsmooth.rst  new_basis_example.rst  param_plotter_example.rst  setting.rst  simple_program.rst  simple_test.rst  theory.rst  turning_points.rst
example_codes/: best_basis_example.py  chi_dist_example.py  new_basis_program.py  param_plotter_example.py  simple_program.py  turning_points.py
example_codes/Data/: x.npy
example_notebooks/: best_basis_example.ipynb  chi_dist_example.ipynb  new_basis_program.ipynb  param_plotter_example.ipynb  simple_program.ipynb  turning_points.py.ipynb
example_notebooks/Data/: y.npy
maxsmooth/: DCF.py  DCP.py  Data_save.py  Models.py  best_basis.py  chidist_plotter.py  derivatives.py  fit_model.py  models.py  msf.py  msf_qp.py  msf_qp_call.py  parameter_plotter.py  qp.py  settings.py  utils.py
msfopt/: Data_save.py  msf_qp.py  settings.py
paper/: paper.bib  paper.md
tests/: .coverage  test_best_basis.py  test_chi_dist_plotter.py  test_driver.py  test_param_plotter.py  test_smooth.py
(+10 files in other folders)
