[project]
name = "maxsmooth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxopt>=1.3.2",
    "cvxpy>=1.7.3",
    "jax>=0.8.0",
    "jaxopt>=0.8.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "progressbar>=2.5",
    "scipy>=1.16.3",
]


[tool.ruff]
line-length = 79

[tool.ruff.lint]
select =["E", "F", "W",  # basics
            "I",            # isort
            "D",            # docstrings
            "UP",           # pyupgrade (includes type modernization)
            "ANN",          # type annotations
            ]

[tool.ruff.lint.pydocstyle]
convention = "google"
